--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
+    "axios": "^1.6.7",
+    "classnames": "^2.5.1",
+    "js-cookie": "^3.0.5",
+    "next": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.0",
+    "react-toast-notifications": "^2.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
