--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
@@ -23,6 +26,7 @@
     "sass": "1.48.0",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.4",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
