--- a/client/package.json
+++ b/client/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@giphy/js-fetch-api": "^5.4.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
+    "emoji-picker-react": "^4.8.0",
     "jquery": "^3.7.1",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-file-icon": "^1.4.0",
     "react-moment": "^1.1.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
