--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@giphy/js-fetch-api": "^5.4.0",
+    "@giphy/react-components": "^9.3.0",
     "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "react": "^18.2.0",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^18.2.0",
+    "react-dropdown": "^1.11.0",
     "react-file-icon": "^1.4.0",
     "react-moment": "^1.1.3",
     "react-redux": "^9.1.0",
